--- a/block-for-font-awesome/assets/css/admin.css
+++ b/block-for-font-awesome/assets/css/admin.css
@@ -2,7 +2,7 @@
  * Ad Box UI
  */
 .gb-ad {
-    background-color: #1d2327;
+    background-color: #ffffff;
     border-radius: 2px;
     box-shadow: 0 2px 0 rgb(44 44 84 / 25%);
     margin: 16px 0;
